--- a/Menu/Menu.csproj
+++ b/Menu/Menu.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.403.8" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
